# tpex-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  assets.json
.github/workflows/: c-api.yml  docker-master.yml  docker-publish.yml  test.yml
.sqlx/: query-117c12bf23db2d50e879d28c788bc2b157e3ccfe8cbf88a8ae4cd86cdf79b259.json  query-370d371025d349c7bbaee455e4c94163ad807b5dc643b695ecbf82f44b5589c5.json  query-967f514c21cf9042c618d59f1de59e8f1e4413ced881796c1accc22fb49891c7.json  query-a2251caed5dbc48150b116ea3264f998ff6fd8e0f0276d829b439e664b3f9714.json  query-afcef37e5deff1a6749af46ac481d4f3eabc7a5e693e53fc1f117fd1abeb2926.json  query-c189c9c94f48968f63430b35577416e41ecdec25cf46335118a1e1952149dbca.json  query-dbb9e4eda8f8c5477c1eb333c5e51a168a9fca588f5ea30a25123e2a91da0611.json  query-f0588e08269551b72f048a4fe0c67ad9f89d4cfb22f5ec429da6d3ebe06f65a8.json
migrations/: 20250923110603_Move_orgs_from_slashes_to_dots.sql
migrations/api/: 20240407003009_init.sql  20240411134035_init-trans-fer.sql
migrations/trans-fer/: 20240411134035_init-trans-fer.sql
src/: main.rs  trade.rs
src/commands/: banker.rs  mod.rs  order.rs  withdraw.rs
src/trade/: balance.rs  investment.rs  mod.rs  order.rs  withdrawal.rs
tpex/: Cargo.toml  README.md
tpex-api/: .sqlx  Cargo.toml
tpex-api/src/: bin.rs  cache.rs  cli.rs  client.rs  lib.rs  main.rs  mirror.rs  server.rs  shared.rs  tokens.rs
tpex-api/src/server/: mod.rs  state.rs  tokens.rs
tpex-api/src/tests/: mod.rs  test.db
tpex-capi/: Cargo.toml  build.rs
tpex-capi/example/: .gitignore  Makefile  main.c
tpex-capi/src/: lib.rs
tpex/resources/: assets.json
tpex/src/: auth.rs  balance.rs  coins.rs  consts.rs  etp.rs  ids.rs  investment.rs  lib.rs  order.rs  shared_account.rs  withdrawal.rs
tpex/src/tests/: mod.rs
tpex/tests/: state.rs
trans-fer/: Cargo.toml
trans-fer/src/: main.rs
trans-fer/src/commands/: banker.rs  mod.rs  order.rs  token.rs  withdraw.rs
