[package]
name = "tpex"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36.0", features = ["full"] }
serde = { version = "^1.0", features = ["std", "derive"] }
serde_json = "^1.0.114"
itertools = "^0.14.0"
chrono = { version = "^0.4.35", features = ["serde"] }
num-format = { version = "0.4.4", features = ["with-system-locale"] }

[[bin]]
name = "validator"
