[package]
name = "tpex"
version = "0.6.0"
edition = "2024"
license = "GPL-3.0-only"
description = "The core TPEx logic, without any server or client implementation"
repository = "https://github.com/TPExchange/tpex-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.45.0", features = ["io-util", "macros", "rt", "rt-multi-thread", "fs"] }
serde = { version = "^1.0", features = ["std", "derive"] }
serde_json = "^1.0.114"
itertools = "^0.14.0"
chrono = { version = "^0.4.35", features = ["serde"] }
num-format = { version = "^0.4.4" }

[dev-dependencies]
tokio = { version = "^1.45.0", features = ["test-util"] }

[[bin]]
name = "validator"
