[package]
name = "trans-fer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "^0.6.1",features = ["cache","chrono","handle_panics"] }
itertools = "^0.12.1"
chrono = "^0.4.35"
tpex = { path = "../tpex", version = "^0.1.0" }
tokio = { version = "^1.36.0", features = ["default", "rt-multi-thread"] }
serde_json = "^1.0.114"
