[package]
name = "trans-fer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "^0.6.1",features = ["cache","chrono","handle_panics"] }
itertools = "^0.12.1"
chrono = "^0.4.35"
tpex = { path = "../tpex", version = "^0.2.0" }
tpex-api = { path = "../tpex-api", version = "^0.2.0", default-features=false, features = ["lib"] }
tokio = { version = "^1.36.0", features = ["default", "rt-multi-thread"] }
# serde = { version = "^1.0", features = ["std", "derive"] }
serde_json = "^1.0.114"
clap = { version = "^4.5.4", features = ["derive"]}
sqlx = { version = "^0.7.4", features = ["runtime-tokio", "sqlite"] }
